--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
    body {
     /* background: url('snowbg.jpeg') no-repeat center; */
     background-size: cover;
+    /* width: 100%; */
     height: 100vh;
     /* cursor: none; */
     font-family: 'Space Mono', monospace;
@@ -182,13 +183,47 @@ img{
     z-index: -100;
 }
 
-#message {
-  width: 70%;
-  height: 70%;
-  margin-left: 15%;
-  margin-top: 7.5%;
-  background-color: rgb(37, 160, 177);
+#message-container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 1;
   position: absolute;
+  z-index: 9;
+}
+
+#close {
+  background-color: white;
+  font-size: 30px;
+  position: absolute;
+  z-index: 11;
+  padding: 10px;
+  margin-top: 3%;
+  margin-left: 3%;
+}
+
+#message {
+  width: 450px;
+  height: 310px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  display: inline-block;
+  position: absolute;
+  opacity: 1;
+  /* font-size: 120%; */
   z-index: 10;
 
+}
+
+#button {
+  text-align: center;
+  width: 35%;
+  font-size: 30px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 9px;
+  margin: auto;
+  margin-top: 50px;
 }
